# Edna_Lang

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  utility.sh
docs/: Design.md  Grammar.md  README.md  Runtime.md
src/: main.cpp
src/edna_impl/: library.ixx
src/edna_impl/compile/: context.ixx  expr_emit.ixx  optimizer.ixx  passes.ixx  stmt_emit.ixx
src/edna_impl/frontend/: ast.ixx  lexer.ixx  lexicals.ixx  parser.ixx
src/edna_impl/runtime/: bytecode.ixx  callables.ixx  context.ixx  handlers1.ixx  meta.ixx  objects.ixx  string_pool.ixx  tables.ixx  value.ixx  values.ixx  vm.ixx
src/edna_impl/runtime/natives/: list_funcs.ixx
test_suite/: assigns.edna  comments.edna  compound_ops.edna  fib.edna  hello.edna  list_basics.edna  list_methods_1.edna  list_methods_2.edna  logical.edna  marcos_1.txt
